--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <nav id="webHead">
         <div>
-            <a href="index.html"><h1>side porducts</h1></a>
+            <a href="index.html"><img src="img/figmaIcon.png" alt=""></a>
             <ul>
                 <li><a class="navA" href="02.layoutPractice.html">Page2</a></li>
                 <li><a class="navA" href="">Solutions</a></li>
